--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Dungeon Master</h1>
   <h3>Monster Battle</h3>
-
-  <div class="criatureForm">
+<div class="fullcontainer">
+  <div class="creatureForm">
     <form id="creatureForm">
         <label for="selectCreature">Seleccionar Criatura:</label>
         <select id="selectCreature">
@@ -67,6 +67,7 @@
           </select>
         
         <br>
+        <br> <br>
         <label for="quantity">Cantidad:</label>
         <input type="number" id="quantity" min="1" value="1" required>
         <br>
@@ -88,7 +89,7 @@
       </div>
     </div>
   </div>
-
+</div>
   
 
   <script src="script.js"></script>
