changes style, and funcions monster focus

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Dungeon Master</h1>
   <h3>Monster Battle</h3>
 <div class="fullcontainer">
-  <div class="creatureForm">
+  <div class="creatureForm flcolumna-1">
     <form id="creatureForm">
         <label for="selectCreature">Seleccionar Criatura:</label>
         <select id="selectCreature">
@@ -75,18 +75,17 @@
     </form>
   </div>
   <di class="flexcontainer">
+    <div class="flcolumna-2">
+        <div id="gridContainer">
+          <div id="grid">
+            <!-- La grilla se generará dinámicamente -->
+          </div>
+        </div>
+      </div>
     <div class="flcolumna-1">
         <div id="creatureList" >
             <!-- Aquí se mostrarán las criaturas -->
           </div>
-    </div>
-    
-    <div class="flcolumna-2">
-      <div id="gridContainer">
-        <div id="grid">
-          <!-- La grilla se generará dinámicamente -->
-        </div>
-      </div>
     </div>
   </div>
 </div>
