--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Administrador de Criaturas</title>
-
+  <title>Dungeon Master - Monster Battle</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <h1>Dungeon Master</h1>
   <h3>Monster Battle</h3>
 <div class="fullcontainer">
-  <div class="creatureForm flcolumna-1">
+  <div class="creatureForm">
     <form id="creatureForm">
+        <div class="col-1">
         <label for="selectCreature">Seleccionar Criatura:</label>
         <select id="selectCreature">
           <option value="">Seleccionar...</option>
         </select>
-        <br>
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" required>
-        <br>
-        <label for="health">Vidas:</label>
-        <input type="number" id="health" required>
-        <br>
+        </div>
+        <div class="col-1">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" required>
+            <br>
+            <label for="health">Vidas:</label>
+            <input type="number" id="health" required>
+        </div>
+
+        <div class="col-1">
         <label for="xCoordinate">Coordenada X:</label>
         <select id="xCoordinate">
             <option value="A">A</option>
@@ -39,7 +44,14 @@
             <option value="M">M</option>
             <option value="N">N</option>
             <option value="O">O</option>
+            <option value="P">P</option>
+            <option value="Q">Q</option>
+            <option value="S">S</option>
+            <option value="T">T</option>
+            <option value="U">U</option>
+            <option value="V">V</option>
           </select>
+        <br>
         <br>
         <label for="yCoordinate">Coordenada Y:</label>
         <select id="yCoordinate">
@@ -58,20 +70,16 @@
             <option value="13">13</option>
             <option value="14">14</option>
             <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-            <option value="21">21</option>
-          </select>
-        
-        <br>
-        <br> <br>
-        <label for="quantity">Cantidad:</label>
-        <input type="number" id="quantity" min="1" value="1" required>
-        <br>
-        <button type="submit">Agregar Criatura</button>
+        </select>
+        </div>
+        <div class="col-1">
+            <label for="quantity">Cantidad:</label>
+            <input type="number" id="quantity" min="1" value="1" required>
+            <br>
+            <br>
+
+            <button type="submit">Agregar Criatura</button>
+        </div>
     </form>
   </div>
   <di class="flexcontainer">
