Mejoras en estilos y en funciones

--- a/index.html
+++ b/index.html
@@ -84,17 +84,21 @@
   </div>
   <di class="flexcontainer">
     <div class="flcolumna-2">
+        
+        <div id="containerFloat" class="containerFloat hide">
+            <a href="#" id="cerrar" >Cerrar</a>
+            <div id="creatureList" >
+                <!-- Aquí se mostrarán las criaturas -->
+            </div>
+        </div>
+
         <div id="gridContainer">
           <div id="grid">
             <!-- La grilla se generará dinámicamente -->
           </div>
         </div>
+
       </div>
-    <div class="flcolumna-1">
-        <div id="creatureList" >
-            <!-- Aquí se mostrarán las criaturas -->
-          </div>
-    </div>
   </div>
 </div>
   
