--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Dungeon Master</h1>
-  <h3>Monster Battle</h3>
+  <h3>Monster Battle Grid </h3>
 <div class="fullcontainer">
   <div class="creatureForm">
     <form id="creatureForm">
