--- a/index.html
+++ b/index.html
@@ -10,6 +10,43 @@
   <h1>Dungeon Master</h1>
   <h3>Monster Battle Grid </h3>
 <div class="fullcontainer">
+  <div class="currentMap"> 
+    <label for="mapBattel">Mapa de Batalla</label>
+    <select id="mapBattel" onchange="changeBattelMap()" >
+        <option value="">Seleccione un mapa</option>
+        <option value="alcazhacha/alcazhacha-A1">Alcazhacha A1</option>
+        <option value="alcazhacha/alcazhacha-A2">Alcazhacha A2</option>
+        <option value="alcazhacha/alcazhacha-A3">Alcazhacha A3</option>
+        <option value="alcazhacha/alcazhacha-A4">Alcazhacha A4</option>
+        <option value="alcazhacha/alcazhacha-A5">Alcazhacha A5</option>
+        <option value="alcazhacha/alcazhacha-A6">Alcazhacha A6</option>
+        <option value="alcazhacha/alcazhacha-A7">Alcazhacha A7</option>
+        <option value="alcazhacha/alcazhacha-A8">Alcazhacha A8</option>
+        <option value="alcazhacha/alcazhacha-A9">Alcazhacha A9</option>
+        <option value="alcazhacha/alcazhacha-A10">Alcazhacha A10</option>
+        <option value="alcazhacha/alcazhacha-A11">Alcazhacha A11</option>
+        <option value="alcazhacha/alcazhacha-A12">Alcazhacha A12</option>
+        <option value="alcazhacha/alcazhacha-A13">Alcazhacha A13</option>
+        <option value="alcazhacha/alcazhacha-A14">Alcazhacha A14</option>
+        <option value="alcazhacha/alcazhacha-A15">Alcazhacha A15</option>
+        <option value="alcazhacha/alcazhacha-A16">Alcazhacha A16</option>
+        <option value="alcazhacha/alcazhacha-A17">Alcazhacha A17</option>
+        <option value="alcazhacha/alcazhacha-A18">Alcazhacha A18</option>
+        <option value="alcazhacha/alcazhacha-A19">Alcazhacha A19</option>
+        <option value="alcazhacha/alcazhacha-A20">Alcazhacha A20</option>
+        <option value="alcazhacha/alcazhacha-A21">Alcazhacha A21</option>
+        <option value="alcazhacha/alcazhacha-A22">Alcazhacha A22</option>
+        <option value="alcazhacha/alcazhacha-A23">Alcazhacha A23</option>
+        <option value="alcazhacha/alcazhacha-A24">Alcazhacha A24</option>
+        <option value="alcazhacha/alcazhacha-A25">Alcazhacha A25</option>
+        <option value="alcazhacha/alcazhacha-A26">Alcazhacha A26</option>
+        <option value="alcazhacha/alcazhacha-A27">Alcazhacha A27</option>
+        <option value="alcazhacha/alcazhacha-A28">Alcazhacha A28</option>
+        <option value="alcazhacha/alcazhacha-A29">Alcazhacha A29</option>
+        <option value="alcazhacha/alcazhacha-A30">Alcazhacha A30</option>
+    </select>
+  </div>
+  <br/>
   <div class="creatureForm">
     <form id="creatureForm">
         <div class="col-1">
